--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2018 - EducationGotHacked</p>
+            <p>&copy; 2018 - Hackaton Team</p>
         </footer>
     </div>
 
