--- a/Views/StudentGrades.cshtml
+++ b/Views/StudentGrades.cshtml
@@ -1,17 +1,7 @@
-﻿@{
-	ViewData["Title"] = "Home Page";
+﻿
+@{
+	ViewData["Title"] = "StudentGrade";
+	Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="btn-group">
-	<div>
-		<button class="btn">K12</button>
-	</div>
-	<div>
-		<button class="btn">Primer Grado</button>
-	</div>
-	<div>
-		<button class="btn">Segundo grado</button>
-	</div>
-	<div>
-		<button class="btn">Tercer grado</button>
-	</div>
-</div>
+
+<h2>StudentGrade</h2>
