--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,3 +1,35 @@
 ﻿@{
 	ViewData["Title"] = "Home Page";
 }
+<html>
+
+<head>
+
+</head>
+
+<body>
+
+<wrapper>
+
+<div id="menu">
+
+            <ul>
+		       <li><a href="/">Home</a></li>
+		       <li><a href="#Tecnologia">Tecnologia</a></li>
+               <li><a href="#Ciencias">Ciencias</a></li>
+               <li><a href="#Matematicas">Matematicas</a></li>
+               <li><a href="#Español">Español</a></li>
+               <li><a href="#Ingles">Ingles</a></li>
+		   </ul>
+
+
+
+
+</wrapper>
+
+
+</body>
+
+
+
+</html>
