--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -35,3 +35,48 @@ body {
         display: none;
     }
 }
+
+#menu{
+
+    background:#222;
+    width: 95%;
+    height: 10%;
+    margin-left: 5%;
+    margin-top:1%;
+    box-shadow:4px 5px 4px  #04a824;
+    overflow:hidden;
+    border-radius:7px;
+    
+    }
+    
+    /* Estilos para el menu */
+    #menu ul {
+        list-style-type: none;
+        margin: 3px;
+        padding: 5px;
+        overflow: hidden;
+    }
+    #menu li {
+        float: left;
+    }
+    
+    #menu a:link, a:visited {
+        display: block;
+        width:90%;
+        font-weight: bold;
+        color: #999;
+        height:30px;
+        float: left;
+        text-align: left;
+        margin-left: 90px;
+        padding: 6px;
+        padding-left: 1px;
+        padding-top: 5px;
+        padding-bottom: 10px;
+        text-decoration: none;
+    }
+    
+    #menu a:hover, a:active {
+        background-color:#333;
+    
+    }
