--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 		<div id="menu">
 			<ul>
 				<li><a href="/">Home</a></li>
-				<li><a href="#Tecnologia">Tecnologia</a></li>
+				<li><a href="@Url.Action("Index", "Technology")">Tecnologia</a></li>
 				<li><a href="#Ciencias">Ciencias</a></li>
 				<li><a href="#Matematicas">Matematicas</a></li>
 				<li><a href="#Español">Español</a></li>
