--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -15,6 +15,7 @@
 				<li><a href="#Español">Español</a></li>
 				<li><a href="#Ingles">Ingles</a></li>
 			</ul>
+		</div><!--end of menu-->
 	</wrapper>
 </body>
 </html>
