Some links work im bad at explaining things

--- a/Views/Technology/Index.cshtml
+++ b/Views/Technology/Index.cshtml
@@ -9,3 +9,12 @@
 <div id="box">
     <p>Placeholder Box :D</p>
 </div>
+<div id="box">
+    <p>Placeholder Box :D</p>
+</div>
+<div id="box">
+    <p>Placeholder Box :D</p>
+</div>
+<div id="box">
+    <p>Placeholder Box :D</p>
+</div>
