--- a/wwwroot/css/cons.css
+++ b/wwwroot/css/cons.css
@@ -2,6 +2,12 @@
 }
 
 #box {
-    width: 900px;
-    background-color: red;
+    height: 100%;
+    width: 270px;
+    border-radius: 10px;
+    border-color: red;
+    border-style: solid;
+    border-width: 1px;
+    padding: 15px;
+    float: none;
 }
