--- a/Views/Technology/Index.cshtml
+++ b/Views/Technology/Index.cshtml
@@ -1,20 +1,21 @@
 ﻿
 @{
-    ViewData["Title"] = "K12Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+	ViewData["Title"] = "K12Index";
+	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>StudentGrades</h2>
-<p>Placeholder Here</p>
-<div id="box">
-    <p>Placeholder Box :D</p>
-</div>
-<div id="box">
-    <p>Placeholder Box :D</p>
-</div>
-<div id="box">
-    <p>Placeholder Box :D</p>
-</div>
-<div id="box">
-    <p>Placeholder Box :D</p>
+<div>
+	<p>Placeholder Here</p>
+	<div id="box">
+		<p>Placeholder Box :D</p>
+	</div>
+	<div id="box">
+		<p>Placeholder Box :D</p>
+	</div>
+	<div id="box">
+		<p>Placeholder Box :D</p>
+	</div>
+	<div id="box">
+		<p>Placeholder Box :D</p>
+	</div>
 </div>
