--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,5 +1,7 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\ 
 for details on configuring this project to bundle and minify static web assets. */
+@import url('site.min.css');
+@import url('site.css');
 body {
     padding-top: 50px;
     padding-bottom: 20px;
@@ -75,8 +77,10 @@ body {
         padding-bottom: 10px;
         text-decoration: none;
     }
-    
+
     #menu a:hover, a:active {
-        background-color:#333;
-    
+        background-color: #333;
     }
+
+
+    
