--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -38,12 +38,12 @@ body {
 
 #menu{
 
-    background:#222;
+    background:#FFF5EE;
     width: 95%;
     height: 10%;
     margin-left: 5%;
     margin-top:1%;
-    box-shadow:4px 5px 4px  #04a824;
+    box-shadow:4px 5px 4px  #808080;
     overflow:hidden;
     border-radius:7px;
     
@@ -64,7 +64,7 @@ body {
         display: block;
         width:90%;
         font-weight: bold;
-        color: #999;
+        color:#008080;
         height:30px;
         float: left;
         text-align: left;
@@ -77,6 +77,185 @@ body {
     }
     
     #menu a:hover, a:active {
-        background-color:#333;
+        background-color:#888;
     
     }
+
+    #content{
+        background-color: #FFF5EE;
+        width: 100%;
+        margin-top: 1%;
+        float: left;
+        }
+        
+        
+        #slide{
+        float: left;
+        width: 50%;
+        height: 55%;
+        margin-left: 3%;
+        margin-top:1%;
+        margin-bottom: 1%;
+        box-shadow:4px 5px 4px  #808080;
+        
+        }
+        
+        #carousel{
+            width:100%;
+          float: left;
+            height:350px; 
+            overflow:hidden;
+        }
+        #carousel ul{
+            list-style:none;
+            width:560%;
+            height:350px;	
+        }
+        #carousel ul li{
+            float:left;
+            width:18%;
+            height:350px;	
+        }
+        #carousel ul li img{
+            width:100%;
+            height:350px;
+        }
+
+        #ads{
+
+            background-color: #008080;
+            width: 35%;
+            height: 35%;
+            float: left;
+            margin-left: 3%;
+            margin-top:2%;
+            }
+
+            .Pro {
+                position: absolute;
+                width: 35%;
+                height: 40%;
+                overflow: hidden;
+                
+                }
+                
+                
+                
+                .Pro img {
+                  width: 100%;
+                  height: 100%;
+                
+                }
+
+
+        /*efectos over*/
+
+        .pro_overlay {
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            padding: 10px;
+            color: white;
+            transform: translateY(100%);
+            transition: transform .35s ease-out;
+        }
+        
+        .Pro:hover .pro_overlay {
+            transform: translateY(0);
+        }
+        
+        .pro_overlay_title {
+            margin: 0;
+            padding: 0 0 12px;
+            transform: translateY( calc(-100% - 10px) ); /* +10px overlay padding */
+            transition: transform .35s ease-out;
+        }
+        
+        .Pro:hover .pro_overlay_title {
+            transform: translateY(0);
+        }
+        
+        
+        
+        
+        .Pro::before {
+            content: ' ';
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            background: transparent;
+            transition: background .35s ease-out;
+        }
+        .Pro:hover::before {
+            background: rgba(0, 0, 0, .7);
+        }
+        
+        /*estilodes de board table */
+
+
+        #aprendi{
+        float: left;
+         width: 100%;
+         background:#21b2e9 50% 100% no-repeat; 
+
+        }
+
+        #mensaje{
+
+            float: left;
+            width: 18%;
+            height: 10%;
+            margin-left: 40%
+        }
+
+        #mensaje h1{
+            color: white;
+        }
+
+        #boxes{
+            background: #21b2e9;
+            width: 100%;
+            float: left;
+        }
+
+        #box1{
+            background-color: white;
+            margin-left: 3%;
+         float: left;
+         width: 30%;
+         height: 230px;
+         text-align: center;
+         margin-bottom: 2%;
+        }
+
+        #box2{
+            float: left;
+            background-color: white;
+            width: 30%;
+            height: 230px;
+            margin-left: 2%;
+            text-align: center;
+            margin-bottom: 2%;
+
+        }
+
+        #box3{
+            float: left;
+            background-color: white;
+            width: 30%;
+            height: 230px;
+            text-align: center;
+            margin-left: 2%;
+            margin-bottom: 2%;
+
+        }
+
+        #text{
+            float: left;
+            margin-left: 40%;
+            color: white;
+        }
