--- a/Views/Technology/ThirdGrade.cshtml
+++ b/Views/Technology/ThirdGrade.cshtml
@@ -4,10 +4,11 @@
 	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<div></div>
 <div class="tm-welcome-box">
 	<div class="tm-welcome-text">
-		<h2 class="tm-section-title">Lorem ipsum dolor</h2>
-		<p>Vivamus eleifend ac turpis sit amet maximus. Nulla in faucibus nisl, ut ultrices magna.</p>
+		<h2 class="tm-section-title">Aprende a ensamblar una computadora</h2>
+		<p>Aprende que hace cada pieza adentro de una computadora y en que área va</p>
 	</div>
 	<a href="#" class="tm-welcome-link tm-button">Read Details</a>
 </div>
