--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -7004,4 +7004,78 @@ a.bg-danger:focus, a.bg-danger:hover {
     }
 }
 /*# sourceMappingURL=bootstrap.min.css.map */
-    
+body {
+    padding-top: 50px;
+    padding-bottom: 20px;
+}
+
+/* Wrapping element */
+/* Set some basic padding to keep content from hitting the edges */
+.body-content {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+/* Carousel */
+.carousel-caption p {
+    font-size: 20px;
+    line-height: 1.4;
+}
+
+/* Make .svg files in the carousel display properly in older browsers */
+.carousel-inner .item img[src$=".svg"] {
+    width: 100%;
+}
+
+/* QR code generator */
+#qrCode {
+    margin: 15px;
+}
+
+/* Hide/rearrange for smaller screens */
+@media screen and (max-width: 767px) {
+    /* Hide captions */
+    .carousel-caption {
+        display: none;
+    }
+}
+
+#menu {
+    background: #FFF5EE;
+    width: 95%;
+    height: 10%;
+    margin-left: 5%;
+    margin-top: 1%;
+    box-shadow: 4px 5px 4px #808080;
+    overflow: hidden;
+    border-radius: 7px;
+}
+
+    /* Estilos para el menu */
+    #menu ul {
+        list-style-type: none;
+        margin: 3px;
+        padding: 5px;
+        overflow: hidden;
+    }
+
+    #menu li {
+        float: left;
+    }
+
+    #menu a:link, a:visited {
+        display: block;
+        width: 90%;
+        font-weight: bold;
+        color: #008080;
+        height: 30px;
+        float: left;
+        text-align: left;
+        margin-left: 90px;
+        padding: 6px;
+        padding-left: 1px;
+        padding-top: 5px;
+        padding-bottom: 10px;
+        text-decoration: none;
+    }
+
