--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -28,6 +28,7 @@
 	<div id="wrapper">
 		<div id="menu">
 			<ul>
+				<li><a href="/">Home</a></li>
 				<li><a href="@Url.Action("Index", "Technology")">Tecnologia</a></li>
 				<li><a href="#Ciencias">Ciencias</a></li>
 				<li><a href="#Matematicas">Matematicas</a></li>
@@ -75,32 +76,29 @@
 
 		</div><!--end of eprendi-->
 
-		<div id="boxes">
+        <div id="boxes">
+            <div id="box2">
+                <h2 class="box2">Contenido</h2>
+                <p>Nuestra Web se enfonca en las materias como Tecnologia, Matematicas, Español, Ingles y entre otras. De esta manera los niños podrian aprenden de distintas menras en las areas que afronten problemas o dificultades.</p>
+
+
+            </div><!--end of box2-->
+
             <div id="box1">
-				<h2 class="box1">Audiencia</h2>
-				<p>Esta aplicacion web esta dirigida a niños que esten cursando de k12 hasta grado 12. Atravez de enseñansa interactiva para poder aprender sobre laTecnologia en diferentes areas.</p>
+                <h2 class="box1">Audiencia</h2>
+                <p>Esta aplicacion web esta dirigida a niños que esten cursando de k12 hasta grado 12. Atravez de enseñansa interactiva para poder aprender sobre laTecnologia en diferentes areas.</p>
 
-			</div><!--end of box1-->
+            </div><!--end of box1-->
 
-			<div id="box2">
-				<h2 class="box2">Contenido</h2>
-				<p>Nuestra Web se enfonca en las materias como Tecnologia, Matematicas, Español, Ingles y entre otras. De esta manera los niños podrian aprenden de distintas menras en las areas que afronten problemas o dificultades.</p>
-
-
-			</div><!--end of box2-->
-
-			<div id="box3">
-				<h2 class="box3">Aprendizaje</h2>
-				<p>Hoy dia los niños prefiren hacer uso de la tecnologia para cualquier cosa, la idea de este pryecto es capturar la atencion de los niños para que ellos puedan desarrollar nuevas tecnicas de prendizaje por su cuenta.</p>
+            <div id="box3">
+                <h2 class="box3">Aprendizaje</h2>
+                <p>Hoy dia los niños prefiren hacer uso de la tecnologia para cualquier cosa, la idea de este pryecto es capturar la atencion de los niños para que ellos puedan desarrollar nuevas tecnicas de prendizaje por su cuenta.</p>
 
 
-			</div><!--end of box3-->
-        
-		   <div id="text">
-           <h3> ¡Diviértete aprendiendo!</h3>
+            </div><!--end of box3-->
 
-		   </div><!--end of text-->
-		</div><!--end of boxes-->
+            <h3 class="center">¡Diviértete aprendiendo!</h3>
+        </div><!--end of boxes-->
 
 		</div><!--end of content-->
 
