--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -223,38 +223,45 @@ body {
             background: #21b2e9;
             width: 100%;
             float: left;
+            padding-top: 20px;
+            padding-left: 20px;
+            padding-right: 20px;
         }
 
         #box1{
             background-color: white;
             margin-left: 3%;
-         float: left;
-         width: 30%;
-         height: 230px;
-         text-align: center;
-         margin-bottom: 2%;
+            float: left;
+            width: 30%;
+            height: auto;
+            text-align: center;
+            margin-bottom: 2%;
+            border-radius: 10px;
+            padding: 15px;
         }
 
-        #box2{
+        #box2 {
             float: left;
             background-color: white;
             width: 30%;
-            height: 230px;
+            height: auto;
             margin-left: 2%;
             text-align: center;
             margin-bottom: 2%;
+            border-radius: 10px;
+            padding: 15px;
+}
 
-        }
-
-        #box3{
+        #box3 {
             float: left;
             background-color: white;
             width: 30%;
-            height: 230px;
+            height: auto;
             text-align: center;
             margin-left: 2%;
             margin-bottom: 2%;
-
+            border-radius: 10px;
+            padding: 15px;
         }
 
         #text{
@@ -4679,7 +4686,7 @@ input[type=button].btn-block, input[type=reset].btn-block, input[type=submit].bt
 
 .navbar-brand {
     float: left;
-    padding-top: .25rem;
+    padding-top: 13px;
     padding-bottom: .25rem;
     margin-right: 1rem;
     font-size: 1.25rem
