--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -318,6 +318,7 @@ body {
 }
 
 .tm-welcome-boxes-container {
+    width:350%;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -331,20 +332,17 @@ body {
     position: static;
     margin-left: auto;
     margin-right: auto;
-    max-width: 820px;
 }
 
 .tm-welcome-box {
-    max-width: 400px;
-    margin-top: 30px;
-    width: 30%;
-
+    max-width: 350px;
+    width:30%px !important;
+    float:left;
+    margin:10px;
 }
 
 .tm-welcome-text {
     background-color: rgba(221, 221, 221, 0.35);
-    padding: 40px;
-    float: right;
 }
 
 .tm-welcome-link {
@@ -1029,7 +1027,8 @@ figure.effect-bubba {
     }
 
     .tm-welcome-box {
-        max-width: 400px;
+        max-width: 350px;
+        float:left;
     }
 
     .tm-section-title {
