--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,12 +31,12 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Technology" asp-action="Index">Technology</a></li>
-                    <li><a asp-area="" asp-controller="Science" asp-action="Index">Science</a></li>
-                    <li><a asp-area="" asp-controller="Math" asp-action="Index">Math</a></li>
-                    <li><a asp-area="" asp-controller="Spanish" asp-action="Index">Spanish</a></li>
-                    <li><a asp-area="" asp-controller="English" asp-action="Index">English</a></li>
-                    <li><a asp-area="" asp-controller="Technology" asp-action="Index">About us</a></li>
+                    <li><a asp-area="" asp-controller="Technology" asp-action="Index">Tecnología</a></li>
+                    <li><a asp-area="" asp-controller="Science" asp-action="Index">Ciencia</a></li>
+                    <li><a asp-area="" asp-controller="Math" asp-action="Index">Matemáticas</a></li>
+                    <li><a asp-area="" asp-controller="Spanish" asp-action="Index">Español</a></li>
+                    <li><a asp-area="" asp-controller="English" asp-action="Index">Ingles</a></li>
+                    <li><a asp-area="" asp-controller="About" asp-action="Index">Sobre Nosotros</a></li>
                 </ul>
             </div>
         </div>
