--- a/Views/Technology/ThirdGrade.cshtml
+++ b/Views/Technology/ThirdGrade.cshtml
@@ -3,27 +3,43 @@
 	ViewData["Title"] = "Index";
 	Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<div>
+</div>
+<br />
 <div></div>
-<div class="tm-welcome-box">
-	<div class="tm-welcome-text">
-		<h2 class="tm-section-title">Aprende a ensamblar una computadora</h2>
-		<p></p>
+<br />
+<div></div>
+<br />
+	<div></div>
+	<div class="tm-welcome-box">
+		<div class="tm-welcome-text">
+			<h2 class="tm-section-title">Aprende a ensamblar una computadora</h2>
+			<p>Diviértete aprendiendo a ensamblar una computadora y aprendiendo para que se utiliza cada pieza.</p>
+		</div>
+		<div><br /></div>
+		<a class="tm-welcome-link" href="@Url.Action("PCAssembly", "Technology")">Accede Ahora</a>
 	</div>
-	<a class="tm-welcome-link" href="@Url.Action("PCAssembly", "Technology")">Accede Ahora</a>
-</div>
-<div class="tm-welcome-box">
-	<div class="tm-welcome-text">
-		<h2 class="tm-section-title">Lorem ipsum dolor</h2>
-		<p>Vivamus eleifend ac turpis sit amet maximus. Nulla in faucibus nisl, ut ultrices magna.</p>
+	<div class="tm-welcome-box">
+		<div class="tm-welcome-text">
+			<h2 class="tm-section-title">Crea tu propio Diario</h2>
+			<br />
+			<br />
+			<br />
+			<br />
+			<p>Apprenderás a crear tu propio diario utilizando HTML</p>
+		</div>
+		<div><br /></div>
+		<a class="tm-welcome-link" href="@Url.Action("", "Technology")">Accede Ahora</a>
 	</div>
-	<a class="tm-welcome-link" href="@Url.Action("", "Technology")">Accede Ahora</a>
-</div>
-<div class="tm-welcome-box">
-	<div class="tm-welcome-text">
-		<h2 class="tm-section-title">Lorem ipsum dolor</h2>
-		<p>Vivamus eleifend ac turpis sit amet maximus. Nulla in faucibus nisl, ut ultrices magna.</p>
+	<div class="tm-welcome-box">
+		<div class="tm-welcome-text">
+			<h2 class="tm-section-title">Lorem ipsum dolor</h2>
+			<br />
+			<br />
+			<br />
+			<p>Vivamus eleifend ac turpis sit amet maximus. Nulla in faucibus nisl, ut ultrices magna.</p>
+		</div>
+		<div><br /></div>
+		<a class="tm-welcome-link" href="@Url.Action("", "Technology")">Accede Ahora</a>
 	</div>
-	<a class="tm-welcome-link" href="@Url.Action("", "Technology")">Accede Ahora</a>
-</div>
-
 
