--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -200,12 +200,11 @@ body {
         /*estilodes de board table */
 
 
-        #aprendi{
-        float: left;
-         width: 100%;
-         background:#21b2e9 50% 100% no-repeat; 
-
-        }
+#aprendi {
+    float: left;
+    width: 100%;
+    background: #993366 50% 100% no-repeat;
+}
 
         #mensaje{
 
@@ -219,14 +218,14 @@ body {
             color: white;
         }
 
-        #boxes{
-            background: #21b2e9;
-            width: 100%;
-            float: left;
-            padding-top: 20px;
-            padding-left: 20px;
-            padding-right: 20px;
-        }
+#boxes {
+    background: #993366;
+    width: 100%;
+    float: left;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
 
         #box1{
             background-color: white;
@@ -343,9 +342,10 @@ body {
 
 .tm-welcome-box {
     max-width: 350px;
-    width:30%px !important;
+    width:30%;
     float:left;
     margin:10px;
+    height:auto !important;
 }
 
 .tm-welcome-text {
