--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -134,13 +134,12 @@ body {
             margin-top:2%;
             }
 
-            .Pro {
-                position: absolute;
-                width: 35%;
-                height: 40%;
-                overflow: hidden;
-                
-                }
+.Pro {
+    position: absolute;
+    width: 31%;
+    height: 331px;
+    overflow: hidden;
+}
                 
                 
                 
