--- a/Views/Technology/Index.cshtml
+++ b/Views/Technology/Index.cshtml
@@ -1,21 +1,58 @@
-﻿
-@{
-	ViewData["Title"] = "K12Index";
-	Layout = "~/Views/Shared/_Layout.cshtml";
-}
+﻿<html>
+<head>
+    <script src="https://unpkg.com/konva@2.4.2/konva.min.js"></script>
+    <meta charset="utf-8">
+    <title>Konva Drag and Drop an Image Demo</title>
+    <style>
 
-<div>
-	<p>Placeholder Here</p>
-	<div id="box">
-		<p>Placeholder Box :D</p>
-	</div>
-	<div id="box">
-		<p>Placeholder Box :D</p>
-	</div>
-	<div id="box">
-		<p>Placeholder Box :D</p>
-	</div>
-	<div id="box">
-		<p>Placeholder Box :D</p>
-	</div>
-</div>
+        body {
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: #F0F0F0;
+        }
+    </style>
+</head>
+<body>
+    <div id="container"></div>
+    <script>
+        var width = window.innerWidth;
+        var height = window.innerHeight;
+
+        function drawImage(imageObj) {
+            var stage = new Konva.Stage({
+                container: 'container',
+                width: width,
+                height: height
+            });
+
+            var layer = new Konva.Layer();
+            // darth vader
+            var darthVaderImg = new Konva.Image({
+                image: imageObj,
+                x: stage.getWidth() / 2 - 200 / 2,
+                y: stage.getHeight() / 2 - 137 / 2,
+                width: 200,
+                height: 137,
+                draggable: true
+            });
+
+            // add cursor styling
+            darthVaderImg.on('mouseover', function () {
+                document.body.style.cursor = 'pointer';
+            });
+            darthVaderImg.on('mouseout', function () {
+                document.body.style.cursor = 'default';
+            });
+
+            layer.add(darthVaderImg);
+            stage.add(layer);
+        }
+        var imageObj = new Image();
+        imageObj.onload = function () {
+            drawImage(this);
+        };
+        imageObj.src = '/images/gpu.png';
+    </script>
+</body>
+</html>
