--- a/Views/Technology/Index.cshtml
+++ b/Views/Technology/Index.cshtml
@@ -3,19 +3,55 @@
 	ViewData["Title"] = "K12Index";
 	Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<style>
+	.tm-welcome-box {
+		background-color: #a9bcd0;
+	}
+	a {
+		color: #a9bcd0;
+	}
+</style>
 <div>
-	<p>Placeholder Here</p>
-	<div id="box">
-		<p>Placeholder Box :D</p>
-	</div>
-	<div id="box">
-		<p>Placeholder Box :D</p>
-	</div>
-	<div id="box">
-		<p>Placeholder Box :D</p>
-	</div>
-	<div id="box">
-		<p>Placeholder Box :D</p>
-	</div>
 </div>
+<br />
+<div></div>
+<br />
+<div></div>
+<br />
+<div></div>
+<div class="tm-welcome-box" style="width:30%;">
+	<div class="tm-welcome-text">
+		<h2 class="tm-section-title">Tercer Grado</h2>
+	</div>
+	<a class="tm-welcome-link" href="@Url.Action("ThirdGrade", "Technology")">Accede Ahora</a>
+</div>
+<div class="tm-welcome-box" style="width:30%;">
+	<div class="tm-welcome-text">
+		<h2 class="tm-section-title">Cuarto Grado</h2>
+	</div>
+	<a class="tm-welcome-link" href="@Url.Action("FourthGrade", "Technology")">Accede Ahora</a>
+</div>
+<div class="tm-welcome-box" style="width:30%;">
+	<div class="tm-welcome-text">
+		<h2 class="tm-section-title">Quinto Grado</h2>
+		</div>
+	<a class="tm-welcome-link" href="@Url.Action("FifthGrade", "Technology")">Accede Ahora</a>
+</div>
+@* Dont judge me please *@
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+
+
