Alex Added Particle js

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -26,68 +26,71 @@
 </head>
 <body>
 	<div id="wrapper">
-			<div id="content">
+		<div id="particles-js">Hello</div>
+		<script src="~/js/particles.js"></script>
+		<div id="content">
 
-                <div id="slide">
+			<div id="slide">
 
- 					<div id="carousel">
+				<div id="carousel">
 
-						<ul><!--Comienzan las laminas y no se presentan solo la primera -->
-						<li><img src="images/1.jpg"/></li>
+					<ul>
+						<!--Comienzan las laminas y no se presentan solo la primera -->
+						<li><img src="images/1.jpg" /></li>
 						<li><img src="images/2.jpg" /></li>
 
-						
-						</ul>
-					</div><!--fin de carousel-->
 
-				</div><!-- fin de slide-->
+					</ul>
+				</div><!--fin de carousel-->
 
-         <div id="ads">
+			</div><!-- fin de slide-->
 
-					<div class="Pro">
-           	           <img class="image" src="images/3.jpg"/>
-                       <div class="pro_overlay">
-			           <h1 class="pro_overlay_title">Tecnologia </h1>
-			           <p class="pro_overlay_cont">Herramientas para educar a niños de primero a grado 12.</p>
-             
-                      </div>
-                    </div><!--fin de Pro-->
-					</div><!--fin de ads-->
+			<div id="ads">
 
-		<div id="aprendi">
-        <div id="mensaje">
+				<div class="Pro">
+					<img class="image" src="images/3.jpg" />
+					<div class="pro_overlay">
+						<h1 class="pro_overlay_title">Tecnologia </h1>
+						<p class="pro_overlay_cont">Herramientas para educar a niños de primero a grado 12.</p>
 
-		  <h1>Aprendizaje</h1>
+					</div>
+				</div><!--fin de Pro-->
+			</div><!--fin de ads-->
 
-	    </div>
+			<div id="aprendi">
+				<div id="mensaje">
 
-        
+					<h1>Aprendizaje</h1>
 
-		</div><!--end of eprendi-->
-
-        <div id="boxes">
-            <div id="box2">
-                <h2 class="box2">Contenido</h2>
-                <p>Nuestra Web se enfonca en las materias como Tecnologia, Matematicas, Español, Ingles y entre otras. De esta manera los niños podrian aprenden de distintas menras en las areas que afronten problemas o dificultades.</p>
+				</div>
 
 
-            </div><!--end of box2-->
 
-            <div id="box1">
-                <h2 class="box1">Audiencia</h2>
-                <p>Esta aplicacion web esta dirigida a niños que esten cursando de k12 hasta grado 12. Atravez de enseñansa interactiva para poder aprender sobre laTecnologia en diferentes areas.</p>
+			</div><!--end of eprendi-->
 
-            </div><!--end of box1-->
-
-            <div id="box3">
-                <h2 class="box3">Aprendizaje</h2>
-                <p>Hoy dia los niños prefiren hacer uso de la tecnologia para cualquier cosa, la idea de este pryecto es capturar la atencion de los niños para que ellos puedan desarrollar nuevas tecnicas de prendizaje por su cuenta.</p>
+			<div id="boxes">
+				<div id="box2">
+					<h2 class="box2">Contenido</h2>
+					<p>Nuestra Web se enfonca en las materias como Tecnologia, Matematicas, Español, Ingles y entre otras. De esta manera los niños podrian aprenden de distintas menras en las areas que afronten problemas o dificultades.</p>
 
 
-            </div><!--end of box3-->
+				</div><!--end of box2-->
 
-            <h3 class="center">¡Diviértete aprendiendo!</h3>
-        </div><!--end of boxes-->
+				<div id="box1">
+					<h2 class="box1">Audiencia</h2>
+					<p>Esta aplicacion web esta dirigida a niños que esten cursando de k12 hasta grado 12. Atravez de enseñansa interactiva para poder aprender sobre laTecnologia en diferentes areas.</p>
+
+				</div><!--end of box1-->
+
+				<div id="box3">
+					<h2 class="box3">Aprendizaje</h2>
+					<p>Hoy dia los niños prefiren hacer uso de la tecnologia para cualquier cosa, la idea de este pryecto es capturar la atencion de los niños para que ellos puedan desarrollar nuevas tecnicas de prendizaje por su cuenta.</p>
+
+
+				</div><!--end of box3-->
+
+				<h3 class="center">¡Diviértete aprendiendo!</h3>
+			</div><!--end of boxes-->
 
 		</div><!--end of content-->
 
