--- a/Views/Technology/PCAssembly.cshtml
+++ b/Views/Technology/PCAssembly.cshtml
@@ -44,7 +44,7 @@
 				</div><!--compo2-->
 
 				<div id="compo3">
-					<img id="drag4" src="/images/batter.png" draggable="true" ondragstart="drag(event)">
+					<img id="drag4" src="/images/csmos.png" draggable="true" ondragstart="drag(event)">
 				</div><!--compo3-->
 
 				<div id="compo4">
