--- a/Views/Technology/PCAssembly.cshtml
+++ b/Views/Technology/PCAssembly.cshtml
@@ -36,19 +36,19 @@
 			<div id="compo">
 
 				<div id="compo1">
-					<img id="drag2" src="/images/ram.png" draggable="true" ondragstart="drag(event)">
+					<img id="drag2" src="\images\RAM.png" draggable="true" ondragstart="drag(event)">
 				</div><!--compo1-->
 
 				<div id="compo2">
-					<img id="drag3" src="/images/cpu.png" draggable="true" ondragstart="drag(event)">
+					<img id="drag3" src="\images\cpu.png" draggable="true" ondragstart="drag(event)">
 				</div><!--compo2-->
 
 				<div id="compo3">
-					<img id="drag4" src="/images/csmos.png" draggable="true" ondragstart="drag(event)">
+					<img id="drag4" src="\images\cmos.png" draggable="true" ondragstart="drag(event)">
 				</div><!--compo3-->
 
 				<div id="compo4">
-					<img id="drag5" src="/images/gpu.png" draggable="true" ondragstart="drag(event)">
+					<img id="drag5" src="\images\gpu.png" draggable="true" ondragstart="drag(event)">
 				</div><!--compo4-->
 			</div><!--end of compo-->
 
@@ -65,7 +65,7 @@
 
 				<div id="GPU" class="image" ondrop="drop(event)" ondragover="allowDrop(event)">
 				</div>
-				<img class="image" src="/images/motherboard.png" />
+				<img class="image" src="\images\motherboard.png" />
 
 
 			</div><!--end of motherd-->
