--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
 </head>
 <body>
 	<div id="wrapper">
-		<div id="particles-js">Hello</div>
+		<div id="particles-js"></div>
 		<script src="~/js/particles.js"></script>
 		<div id="content">
 
