--- a/Views/Technology/Index.cshtml
+++ b/Views/Technology/Index.cshtml
@@ -1,25 +1,4 @@
-﻿
-@{
-	ViewData["Title"] = "K12Index";
-	Layout = "~/Views/Shared/_Layout.cshtml";
-}
-<style>
-	.tm-welcome-box {
-		background-color: #a9bcd0;
-	}
-	a {
-		color: #a9bcd0;
-	}
-</style>
-<div>
-</div>
-<br />
-<div></div>
-<br />
-<div></div>
-<br />
-<div></div>
-<div class="tm-welcome-box" style="width:30%;">
+﻿<div class="tm-welcome-box" style="width:30%;">
 	<div class="tm-welcome-text">
 		<h2 class="tm-section-title">Tercer Grado</h2>
 	</div>
@@ -37,21 +16,3 @@
 		</div>
 	<a class="tm-welcome-link" href="@Url.Action("FifthGrade", "Technology")">Accede Ahora</a>
 </div>
-@* Dont judge me please *@
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-
-
