--- a/Views/Technology/PCAssembly.cshtml
+++ b/Views/Technology/PCAssembly.cshtml
@@ -24,9 +24,6 @@
             ev.target.appendChild(document.getElementById(data));
         }
 	</script>
-	<script src="anime.min.js"></script>
-
-
 
 	<div id="wrapper">
 
@@ -36,19 +33,19 @@
 			<div id="compo">
 
 				<div id="compo1">
-					<img id="drag2" src="\images\RAM.png" draggable="true" ondragstart="drag(event)">
+					<img id="drag2" src="~/images/Technology/PC_Assembly/RAM.png" draggable="true" ondragstart="drag(event)">
 				</div><!--compo1-->
 
 				<div id="compo2">
-					<img id="drag3" src="\images\cpu.png" draggable="true" ondragstart="drag(event)">
+					<img id="drag3" src="~/images/Technology/PC_Assembly/cpu.png" draggable="true" ondragstart="drag(event)">
 				</div><!--compo2-->
 
 				<div id="compo3">
-					<img id="drag4" src="\images\cmos.png" draggable="true" ondragstart="drag(event)">
+					<img id="drag4" src="~/images/Technology/PC_Assembly/cmos.png" draggable="true" ondragstart="drag(event)">
 				</div><!--compo3-->
 
 				<div id="compo4">
-					<img id="drag5" src="\images\gpu.png" draggable="true" ondragstart="drag(event)">
+					<img id="drag5" src="~/images/Technology/PC_Assembly/gpu.png" draggable="true" ondragstart="drag(event)">
 				</div><!--compo4-->
 			</div><!--end of compo-->
 
@@ -65,7 +62,7 @@
 
 				<div id="GPU" class="image" ondrop="drop(event)" ondragover="allowDrop(event)">
 				</div>
-				<img class="image" src="\images\motherboard.png" />
+				<img class="image" src="~/images/Technology/PC_Assembly/motherboard.png" />
 
 
 			</div><!--end of motherd-->
