Started the Choose Grade buttons

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
 	</style>
 	<section>
 		<header class="display-1 text-center">
-			<h1 class="display-3 text-center">¡Aprende Disfrutando!</h1>
+			<h1 class="display-3 text-center"><b>¡Aprende Disfrutando!</b></h1>
 			<p class="lead text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, ipsam, eligendi, in quo sunt possimus non incidunt odit vero aliquid similique quaerat nam nobis illo aspernatur vitae fugiat numquam repellat.</p>
 			<div class="main-images">
 				<img src="~/images/Index/index-image-1.jpg" class="img-fluid main-image" />
