--- a/Views/Shared/_ChooseGrade.cshtml
+++ b/Views/Shared/_ChooseGrade.cshtml
@@ -1,1 +1,45 @@
-﻿
+﻿<section>
+
+	<style>
+		ul{
+			list-style:none;
+		}
+		li{
+			float:left;
+			position:relative;
+		}
+		.button_div {
+			display: inline-block;
+			margin: auto;
+			width: 50%;
+			padding: 10px;
+		}
+	</style>
+	<header class="display-3 text-center"><b>Selecciona el grado</b></header>
+	<br />
+		<div class="button_div ">
+			<ul >
+				<li>
+					<div>
+						<button class="btn btn-squared-default btn-primary">K12</button>
+					</div>
+				</li>
+				<li>
+					<div>
+						<button class="btn btn-squared-default btn-primary">1ro</button>
+					</div>
+				</li>
+				<li>
+					<div>
+						<button class="btn btn-squared-default btn-primary">2ndo</button>
+					</div>
+				</li>
+				<li>
+					<div>
+						<button class="btn btn-squared-default btn-primary">3ro</button>
+					</div>
+				</li>
+			</ul>
+		</div>
+</section>
+<br />
