--- a/Views/Technology/Index.cshtml
+++ b/Views/Technology/Index.cshtml
@@ -1,18 +1,2 @@
-﻿<div class="tm-welcome-box" style="width:30%;">
-	<div class="tm-welcome-text">
-		<h2 class="tm-section-title">Tercer Grado</h2>
-	</div>
-	<a class="tm-welcome-link" href="@Url.Action("ThirdGrade", "Technology")">Accede Ahora</a>
-</div>
-<div class="tm-welcome-box" style="width:30%;">
-	<div class="tm-welcome-text">
-		<h2 class="tm-section-title">Cuarto Grado</h2>
-	</div>
-	<a class="tm-welcome-link" href="@Url.Action("FourthGrade", "Technology")">Accede Ahora</a>
-</div>
-<div class="tm-welcome-box" style="width:30%;">
-	<div class="tm-welcome-text">
-		<h2 class="tm-section-title">Quinto Grado</h2>
-		</div>
-	<a class="tm-welcome-link" href="@Url.Action("FifthGrade", "Technology")">Accede Ahora</a>
-</div>
+﻿<partial name="~/Views/Shared/_ChooseGrade.cshtml" />
+
